# jinja2-lucide

./: Makefile  README.md  jinja2_lucide.py  pyproject.toml
examples/: simple.py
tests/: test_lucide.py
